# veto-agent

./: .env.example  .gitignore  README.md  agent.py  app.py  calendar_service.py  pyproject.toml
configs/: config.yaml
templates/: approval_result.html  chat.html  home.html
