[project]
name = "veto-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "google-auth-oauthlib>=1.4.0",
    "groq>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
